fix the draft prompt area so it is always displayed completely instead of with a scrollbar

--- a/less/gameboard.less
+++ b/less/gameboard.less
@@ -430,7 +430,7 @@
 }
 
 .draft-prompt-area {
-  overflow:auto;
+  overflow:visible;
 }
 
 .draft-inset-pane {
